--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               <div class="social-list">
                 <ul>
                   <li><a href="https://github.com/james-sousa"><i class="fab fa-github-alt"></i></a></li>
-                  <li><a href="https://www.instagram.com/james_sousa_of/"><i class="fab fa-instagram"></i></a></li>
+                  <li><a href="https://www.instagram.com/james.sousa_/"><i class="fab fa-instagram"></i></a></li>
                   <li><a href="https://www.linkedin.com/in/james-sousa-bb5bb51b1/"><i class="fab fa-linkedin"></i></a></li>
 
                 </ul>
